--- a/JxtHtmlControls/form.css
+++ b/JxtHtmlControls/form.css
@@ -2,7 +2,6 @@
 
 /*General */
 html{    
-  background:url('images/sun-2297961_1920.jpg') no-repeat;
   background-size: cover;
   height:100%;
 }
